fix(bedrock): extract utils, improve error handling, validate input, secure logs, add tests, expand model fields